--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
         "sinon": "^1.17.5",
         "sinon-chai": "^2.8.0",
         "webpack": "^1.13.1",
-        "webpack-dev-server": "^1.14.1"
+        "webpack-dev-server": "^1.14.1",
+        "eslint": "^4.9.0",
+        "eslint-config-airbnb": "^16.1.0",
+        "eslint-plugin-import": "^2.7.0",
+        "eslint-plugin-jsx-a11y": "^6.0.2",
+        "eslint-plugin-react": "^7.4.0"
     }
 }
